--- a/app/src/main/res/layout/activity_mood_selection.xml
+++ b/app/src/main/res/layout/activity_mood_selection.xml
@@ -285,7 +285,12 @@
                     android:inputType="textMultiLine"
                     android:lines="4" />
             </com.google.android.material.textfield.TextInputLayout>
-
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone" />
             <Button
                 android:id="@+id/buttonSaveMood"
                 android:layout_width="0dp"
